--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,8 +1,17 @@
 @import "tailwindcss";
 
+@layer base {
+  .Container {
+    @apply 2xl:px-28 xl:px-20 lg:px-10 md:px-10 px-4;
+  }
+}
+
 :root {
   --background: #ffffff;
   --foreground: #171717;
+  --primary-color: #ff6200; /*  primary color */
+  --secondary-color: #202020; /*  secondary color */
+  --thirdly-color: #a0a2a7; /*  secondary color */
 }
 
 @theme inline {
@@ -10,9 +19,12 @@
   --color-foreground: var(--foreground);
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
+  --color-primary: var(--primary-color);
+  --color-secondary: var(--secondary-color);
+  --color-thirdly: var(--thirdly-color);
 }
 
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) {
   :root {
     --background: #0a0a0a;
     --foreground: #ededed;
@@ -23,4 +35,4 @@ body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
-}
+} */
